# sparkrtc-public

./: .gitignore  CLAUDE.md  compile_commands.json  report_draft.md
.github/: copilot-instructions.md
my_experiment/code/: gui_app.py  llm_analysis.py  process_video_qrcode.py  pyproject.toml  run.sh  send_webhock.py  send_webhook.py  test_run_scenarios.py  test_scenarios.py
my_experiment/code/testbed/: README.md  electron-vite.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json
my_experiment/code/testbed/backend/: app.py  pyproject.toml
my_experiment/code/testbed/backend/models/: schemas.py
my_experiment/code/testbed/backend/routers/: analysis.py  code_agent.py  comparison.py  experiment.py  preprocess.py  settings.py
my_experiment/code/testbed/backend/services/: agent_pipeline.py  build_service.py  config.py  experiment_runner.py  file_reader.py  git_service.py  llm_service.py  log_collector.py  process_bridge.py
my_experiment/code/testbed/src/main/: index.ts  python-bridge.ts
my_experiment/code/testbed/src/preload/: index.ts
my_experiment/code/testbed/src/renderer/: App.tsx  index.html
my_experiment/code/testbed/src/renderer/api/: client.ts  types.ts
my_experiment/code/testbed/src/renderer/components/layout/: DashboardLayout.tsx  Sidebar.tsx
my_experiment/code/testbed/src/renderer/data/: debugScenarios.ts
my_experiment/code/testbed/src/renderer/store/: analysisStore.ts  codeAgentStore.ts  experimentStore.ts  settingsStore.ts
my_experiment/code/testbed/src/renderer/styles/: globals.css
(+20 files in other folders)
