[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.13.0.90",
    "psutil>=7.2.1",
    "pyqt6>=6.10.2",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "openai>=1.30.0",
]
