[project]
name = "sparkrtc-testbed-backend"
version = "0.1.0"
description = "FastAPI backend for SparkRTC Testbed"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "openai>=1.30.0",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.13.0.90",
    "matplotlib>=3.10.8",
    "psutil>=7.2.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
]
